--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "devDependencies": {
     "express": "^4.17.1",
     "joi": "^13.1.0"
+  },
+  "dependencies": {
+    "helmet": "^3.18.0",
+    "morgan": "^1.9.1"
   }
 }
