--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "joi": "^13.1.0"
   },
   "dependencies": {
+    "config": "^3.1.0",
+    "debug": "^4.1.1",
     "helmet": "^3.18.0",
     "morgan": "^1.9.1"
   }
