--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "config": "^3.1.0",
     "debug": "^4.1.1",
     "helmet": "^3.18.0",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "pug": "^2.0.4"
   }
 }
